--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
+html {
+  background-color: pink;
+}
+.parent-header {
+  margin-left: 60px;
   text-align: center;
+  color: rgb(255, 255, 255);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.score-header {
+  background-color: #da3aa4;
+  width: 100vw;
+  padding-left: 1350px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Score {
+  background-color: #e354f0;
+  color: white;
+  padding-left: 1350px;
 }
